--- a/index.css
+++ b/index.css
@@ -192,6 +192,12 @@ a:hover {
 
 /*===========Mobile===========*/
 @media screen and (max-width: 768px) {
+
+    body {
+        margin: 0;
+        padding: 0;
+        min-width: 375px;
+    }
     .navbar {
         padding-left: 1rem;
         position: relative;
