--- a/index.css
+++ b/index.css
@@ -201,11 +201,12 @@ a:hover {
     .navbar {
         padding-left: 1rem;
         position: relative;
+        width: auto;
     }
 
     .navLinks {
         position: absolute;
-        left: 15rem;
+        left: 14rem;
         top: 3.5rem;
         padding-top: 6rem;
         height: 500px;
@@ -229,7 +230,7 @@ a:hover {
 
     .menu {
         display: inline-block;
-        padding-right: 1.5rem;
+        padding-right: 1rem;
     }
 
     #open {
