--- a/index.css
+++ b/index.css
@@ -293,7 +293,7 @@ a:hover {
 
     #right {
         margin-top: 2rem;
-        width: 28rem;
+        width: auto;
         margin-left: 1rem;
     }
 
